--- a/SVA/Main.storyboard
+++ b/SVA/Main.storyboard
@@ -19,18 +19,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <subviews>
-                            <searchBar contentMode="redraw" id="201" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
+                            <searchBar contentMode="redraw" id="201" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" placeholder="Enter Name">
                                 <rect key="frame" x="20" y="20" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" autocorrectionType="no" spellCheckingType="no"/>
                             </searchBar>
-                            <searchBar contentMode="redraw" id="202" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
+                            <searchBar contentMode="redraw" id="202" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" placeholder="Enter Street">
                                 <rect key="frame" x="348" y="20" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" autocapitalizationType="allCharacters"/>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="203" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
-                                <rect key="frame" x="20" y="84" width="794" height="593"/>
+                                <rect key="frame" x="20" y="84" width="794" height="657"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
@@ -45,7 +45,7 @@
                                 </prototypes>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="797" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
-                                <rect key="frame" x="698" y="27" width="100" height="30"/>
+                                <rect key="frame" x="694" y="34" width="100" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Reset"/>
                                 <connections>
@@ -57,6 +57,8 @@
                     <connections>
                         <outlet property="MainTableView" destination="203" id="name-outlet-203"/>
                         <outlet property="ResetButton" destination="797" id="name-outlet-797"/>
+                        <outlet property="NameEntry" destination="201" id="name-outlet-201"/>
+                        <outlet property="StreetEntry" destination="202" id="name-outlet-202"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
